--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,14 @@
 spring.application.name=open-care-backend
 
 # Keycloak Configuration
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/your-realm
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/your-realm/protocol/openid-connect/certs
-
-# application-prod.properties
-
-# Use HTTPS
-server.ssl.enabled=true
-server.ssl.key-store=classpath:keystore.p12
-server.ssl.key-store-password=yourpassword
-server.ssl.key-store-type=PKCS12
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/opencare
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/opencare/protocol/openid-connect/certs
 
 # Keycloak connections
-app.keycloak.server-url=https://your-keycloak-server.com
-app.keycloak.realm=your-realm
-app.keycloak.client-id=${KEYCLOAK_CLIENT_ID}
-app.keycloak.client-secret=${KEYCLOAK_CLIENT_SECRET}
+app.keycloak.server-url=http://localhost:8080
+app.keycloak.realm=opencare
+app.keycloak.client-id=open-care-cli
+app.keycloak.client-secret=5tx35o0yRFiuft9GIQEcWWKr6U9gjcGO
 
 # Connection timeouts
 spring.mvc.async.request-timeout=30000
