--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,18 @@
 spring.application.name=open-care-backend
 
+# Postgres configuration
+spring.datasource.url = jdbc:postgresql://${DB_HOSTNAME:localhost}:5432/open_care
+spring.datasource.username = ${POSTGRES_USERNAME:postgres}
+spring.datasource.password = ${POSTGRES_PASSWORD:12345678}
+
+
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto =update
+
+spring.liquibase.drop-first = false
+spring.liquibase.default-schema = public
+spring.liquibase.change-log=classpath:/db.changelog/db.changelog-master.yaml
+
 # Keycloak Configuration
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/opencare
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/opencare/protocol/openid-connect/certs
@@ -7,8 +20,8 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/real
 # Keycloak connections
 app.keycloak.server-url=http://localhost:8080
 app.keycloak.realm=opencare
-app.keycloak.client-id=open-care-cli
-app.keycloak.client-secret=5tx35o0yRFiuft9GIQEcWWKr6U9gjcGO
+app.keycloak.client-id=open-care-backend
+app.keycloak.client-secret=u3L5IEUSLoBoPzFghcMUvdSJSUedr6Fm
 
 # Connection timeouts
 spring.mvc.async.request-timeout=30000
