--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,18 @@
+server.port=6500
+
 spring.application.name=open-care-backend
 
 # Postgres configuration
-spring.datasource.url = jdbc:postgresql://${DB_HOSTNAME:localhost}:5432/open_care
+spring.datasource.url = jdbc:postgresql://${DB_HOSTNAME:localhost}:5432/open_care_new
 spring.datasource.username = ${POSTGRES_USERNAME:postgres}
 spring.datasource.password = ${POSTGRES_PASSWORD:12345678}
-
 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto =update
 
 spring.liquibase.drop-first = false
 spring.liquibase.default-schema = public
-spring.liquibase.change-log=classpath:/db.changelog/db.changelog-master.yaml
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 
 # Keycloak Configuration
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/opencare
@@ -36,3 +37,6 @@ security.headers.strict-transport-security=max-age=31536000; includeSubDomains
 app.rate-limiting.enabled=true
 app.rate-limiting.limit=100
 app.rate-limiting.refresh-period=60
+
+# Application URLs
+app.frontend.redirect-uri=http://localhost:4200
