--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,25 @@ app.rate-limiting.refresh-period=60
 
 # Application URLs
 app.frontend.redirect-uri=http://localhost:4200
+
+##########################
+# Swagger Configuration  #
+##########################
+springdoc.show-actuator=false
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs/public
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.doc-expansion=no
+springdoc.swagger-ui.defaultModelsExpandDepth=0
+springdoc.swagger-ui.filter=true
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.disable-i18n=true
+
+##########################
+# Logging Configuration  #
+##########################
+logging.level.root=error
+logging.level.sql=debug
+logging.level.web=debug
