--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,9 @@ app.keycloak.server-url=http://localhost:8080
 app.keycloak.realm=opencare
 app.keycloak.client-id=open-care-backend
 app.keycloak.client-secret=u3L5IEUSLoBoPzFghcMUvdSJSUedr6Fm
+app.keycloak.admin.client-id=admin-cli
+app.keycloak.admin.username=admin
+app.keycloak.admin.password=admin
 
 # Connection timeouts
 spring.mvc.async.request-timeout=30000
