--- a/src/main/resources/db/changelog/v-0.1.0/tables/profile.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/tables/profile.yaml
@@ -42,17 +42,23 @@ databaseChangeLog:
                   name: union_id
                   type: int4
               - column:
+                  constraints:
+                    nullable: false
                   name: created_by
-                  type: int8
+                  type: varchar(100)
               - column:
                   constraints:
                     nullable: false
                   name: created_at
                   type: timestamp
               - column:
+                  constraints:
+                    nullable: false
                   name: updated_by
-                  type: int8
+                  type: varchar(100)
               - column:
+                  constraints:
+                    nullable: false
                   name: updated_at
                   type: timestamp
             tableName: profile
