--- a/src/main/resources/db/changelog/v-0.1.0/tables/doctor.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/tables/doctor.yaml
@@ -68,6 +68,26 @@ databaseChangeLog:
                   name: is_active
                   type: boolean
                   defaultValueBoolean: true
+              - column:
+                  constraints:
+                    nullable: false
+                  name: created_by
+                  type: varchar(100)
+              - column:
+                  constraints:
+                    nullable: false
+                  name: created_at
+                  type: timestamp
+              - column:
+                  constraints:
+                    nullable: false
+                  name: updated_by
+                  type: varchar(100)
+              - column:
+                  constraints:
+                    nullable: false
+                  name: updated_at
+                  type: timestamp
             tableName: doctor
         - addForeignKeyConstraint:
             baseColumnNames: user_id
