--- a/src/main/resources/db/changelog/v-0.1.0/tables/hospital.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/tables/hospital.yaml
@@ -60,21 +60,25 @@ databaseChangeLog:
                     nullable: false
                   name: created_by
                   type: varchar(100)
+                  defaultValue: 'admin'
               - column:
                   constraints:
                     nullable: false
                   name: created_at
                   type: timestamp
+                  defaultValueComputed: 'CURRENT_TIMESTAMP'
               - column:
                   constraints:
                     nullable: false
                   name: updated_by
                   type: varchar(100)
+                  defaultValue: 'admin'
               - column:
                   constraints:
                     nullable: false
                   name: updated_at
                   type: timestamp
+                  defaultValueComputed: 'CURRENT_TIMESTAMP'
             tableName: hospital
         - addForeignKeyConstraint:
             baseColumnNames: district_id
