--- a/src/main/resources/db/changelog/v-0.1.0/tables/rating.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/tables/rating.yaml
@@ -15,7 +15,7 @@ databaseChangeLog:
               - column:
                   constraints:
                     nullable: false
-                  name: user_id
+                  name: profile_id
                   type: int8
               - column:
                   name: doctor_id
@@ -31,14 +31,14 @@ databaseChangeLog:
                   type: json
             tableName: rating
         - addForeignKeyConstraint:
-            baseColumnNames: user_id
+            baseColumnNames: profile_id
             baseTableName: rating
-            constraintName: rating_fk_user
+            constraintName: rating_fk_profile
             deferrable: false
             initiallyDeferred: false
             onUpdate: CASCADE
             referencedColumnNames: id
-            referencedTableName: user
+            referencedTableName: profile
             validate: true
         - addForeignKeyConstraint:
             baseColumnNames: doctor_id
