--- a/src/main/resources/db/changelog/v-0.1.0/tables/doctor.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/tables/doctor.yaml
@@ -73,21 +73,25 @@ databaseChangeLog:
                     nullable: false
                   name: created_by
                   type: varchar(100)
+                  defaultValue: 'admin'
               - column:
                   constraints:
                     nullable: false
                   name: created_at
                   type: timestamp
+                  defaultValueComputed: 'CURRENT_TIMESTAMP'
               - column:
                   constraints:
                     nullable: false
                   name: updated_by
                   type: varchar(100)
+                  defaultValue: 'admin'
               - column:
                   constraints:
                     nullable: false
                   name: updated_at
                   type: timestamp
+                  defaultValueComputed: 'CURRENT_TIMESTAMP'
             tableName: doctor
         - addForeignKeyConstraint:
             baseColumnNames: profile_id
