--- a/src/main/resources/db/changelog/v-0.1.0/tables/medical_test.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/tables/medical_test.yaml
@@ -26,7 +26,7 @@ databaseChangeLog:
                   type: varchar(100)
               - column:
                   name: alternative_names
-                  type: varchar[]
+                  type: varchar(500)
               - column:
                   name: description
                   type: varchar(500)
