--- a/src/main/resources/db/changelog/v-0.1.0/tables/hospital.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/tables/hospital.yaml
@@ -53,7 +53,7 @@ databaseChangeLog:
                   name: lon
                   type: varchar(100)
               - column:
-                  name: url
+                  name: website_url
                   type: varchar(500)
               - column:
                   constraints:
