--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,27 +1,27 @@
-# write docker file for java 23 and maven 3.10.0 and copy the jar file to /app/app.jar
-# expose the port 6500
-# run the jar file
-# FROM maven:3.10.0-openjdk-17-slim AS build
-# WORKDIR /app
 
+# Use Maven to build the project
 FROM maven:3.10.0-openjdk-17-slim AS build
 
 WORKDIR /app
 
+# Copy the pom.xml file and download dependencies
 COPY pom.xml ./
-
 RUN mvn dependency:go-offline
 
+# Copy the source code and build the application
 COPY src ./src
-
 RUN mvn clean package -DskipTests
 
+# Use a lightweight JDK image to run the application
 FROM eclipse-temurin:23
 
 WORKDIR /app
 
-COPY --from=build /app/target/open-care-0.0.1-SNAPSHOT.jar ./app.jar
+# Copy the built JAR file from the build stage
+COPY --from=build /app/target/*.jar ./app.jar
 
+# Expose the port the application will run on
 EXPOSE 6500
 
+# Run the application
 ENTRYPOINT ["java", "-jar", "app.jar"]
