--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,27 +1,28 @@
-
-# Use Maven to build the project
-FROM maven:3.10.0-openjdk-17-slim AS build
+# Stage 1: Build the application using Maven and Java 17
+FROM maven:3.8.5-openjdk-17-slim AS build
 
 WORKDIR /app
 
-# Copy the pom.xml file and download dependencies
+# Copy the Maven project descriptor and download dependencies
 COPY pom.xml ./
 RUN mvn dependency:go-offline
 
-# Copy the source code and build the application
+# Copy the entire project source code
 COPY src ./src
+
+# Build the application
 RUN mvn clean package -DskipTests
 
-# Use a lightweight JDK image to run the application
-FROM eclipse-temurin:23
+# Stage 2: Create the final image using Java 17
+FROM eclipse-temurin:17-jre-jammy
 
 WORKDIR /app
 
-# Copy the built JAR file from the build stage
-COPY --from=build /app/target/*.jar ./app.jar
+# Copy the built JAR file from the previous stage
+COPY --from=build /app/target/open-care-backend-0.0.1-SNAPSHOT.jar ./app.jar
 
-# Expose the port the application will run on
+# Expose application port
 EXPOSE 6500
 
-# Run the application
+# Run the Spring Boot application
 ENTRYPOINT ["java", "-jar", "app.jar"]
