--- a/src/main/resources/db/changelog/v-0.1.0/seed.changelog.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/seed.changelog.yaml
@@ -49,6 +49,11 @@ databaseChangeLog:
             tableName: hospital
             quotchar: '"'
         - loadData:
+            file: seeds/profile.csv
+            relativeToChangelogFile: true
+            tableName: profile
+            quotchar: '"'
+        - loadData:
             file: seeds/doctor.csv
             relativeToChangelogFile: true
             tableName: doctor
