--- a/src/main/resources/db/changelog/v-0.1.0/tables/doctor.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/tables/doctor.yaml
@@ -16,43 +16,17 @@ databaseChangeLog:
                   name: profile_id
                   type: int8
               - column:
-                  constraints:
-                    nullable: false
-                  name: name
-                  type: varchar(100)
-              - column:
-                  name: bn_name
-                  type: varchar(100)
-              - column:
-                  name: gender
-                  type: varchar(20)
-              - column:
                   name: bmdc_no
                   type: varchar(100)
               - column:
-                  name: phone
-                  type: varchar(100)
+                  name: degrees
+                  type: varchar(250)
               - column:
-                  name: email
-                  type: varchar(100)
-              - column:
-                  name: address
-                  type: varchar(512)
+                  name: specializations
+                  type: varchar(250)
               - column:
                   name: start_date
                   type: date
-              - column:
-                  name: district_id
-                  type: int4
-              - column:
-                  name: upazila_id
-                  type: int4
-              - column:
-                  name: union_id
-                  type: int4
-              - column:
-                  name: photo
-                  type: bytea
               - column:
                   name: description
                   type: text
@@ -102,34 +76,4 @@ databaseChangeLog:
             onUpdate: CASCADE
             referencedColumnNames: id
             referencedTableName: profile
-            validate: true
-        - addForeignKeyConstraint:
-            baseColumnNames: district_id
-            baseTableName: doctor
-            constraintName: doctor_fk_district
-            deferrable: false
-            initiallyDeferred: false
-            onUpdate: CASCADE
-            referencedColumnNames: id
-            referencedTableName: district
-            validate: true
-        - addForeignKeyConstraint:
-            baseColumnNames: upazila_id
-            baseTableName: doctor
-            constraintName: doctor_fk_upazila
-            deferrable: false
-            initiallyDeferred: false
-            onUpdate: CASCADE
-            referencedColumnNames: id
-            referencedTableName: upazila
-            validate: true
-        - addForeignKeyConstraint:
-            baseColumnNames: union_id
-            baseTableName: doctor
-            constraintName: doctor_fk_union
-            deferrable: false
-            initiallyDeferred: false
-            onUpdate: CASCADE
-            referencedColumnNames: id
-            referencedTableName: union
             validate: true
