social organization api

--- a/src/main/resources/db/changelog/v-0.1.0/seed.changelog.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/seed.changelog.yaml
@@ -49,7 +49,12 @@ databaseChangeLog:
             tableName: hospital
             quotchar: '"'
         - loadData:
-            file: seeds/profile.csv
+            file: seeds/doctor_profile.csv
+            relativeToChangelogFile: true
+            tableName: profile
+            quotchar: '"'
+        - loadData:
+            file: seeds/user_profile.csv
             relativeToChangelogFile: true
             tableName: profile
             quotchar: '"'
