--- a/src/main/resources/db/changelog/v-0.1.0/tables/profile.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/tables/profile.yaml
@@ -13,6 +13,9 @@ databaseChangeLog:
                   name: id
                   type: bigserial
               - column:
+                  name: user_type
+                  type: varchar(100)
+              - column:
                   name: username
                   type: varchar(100)
               - column:
