--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ KEYCLOAK_SERVER_URL=http://localhost:8080
 KEYCLOAK_REALM=opencare
 KEYCLOAK_CLIENT_ID=open-care-backend
 KEYCLOAK_CLIENT_SECRET=u3L5IEUSLoBoPzFghcMUvdSJSUedr6Fm
+KEYCLOAK_ADMIN_REALM=master
 KEYCLOAK_ADMIN_CLIENT_ID=admin-cli
 KEYCLOAK_ADMIN_USERNAME=admin
 KEYCLOAK_ADMIN_PASSWORD=admin
