--- a/.env.qa
+++ b/.env.qa
@@ -28,3 +28,9 @@ FRONTEND_REDIRECT_URI=http://localhost:5173
 LOGGING_LEVEL_ROOT=error
 LOGGING_LEVEL_SQL=debug
 LOGGING_LEVEL_WEB=debug
+
+# MinIO Configuration
+MINIO_ENDPOINT=localhost:9000
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin123
+MINIO_BUCKET_NAME=opencare
