--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -85,3 +85,10 @@ logging:
     root: ${LOGGING_LEVEL_ROOT:error}
     sql: ${LOGGING_LEVEL_SQL:debug}
     web: ${LOGGING_LEVEL_WEB:debug}
+
+# Minio Configuration
+minio:
+  endpoint: ${MINIO_ENDPOINT:http://127.0.0.1:9000}
+  accessKey: ${MINIO_ACCESS_KEY:minioadmin}
+  secretKey: ${MINIO_SECRET_KEY:minioadmin123}
+  bucketName: ${MINIO_BUCKET_NAME:opencare}
