--- a/redis-docker-compose.yml
+++ b/redis-docker-compose.yml
@@ -1,13 +1,14 @@
+version: '3'
+
 services:
      redis:
-          image: redis:7.2-alpine
-          container_name: redis
+          image: redis:latest
           ports:
                - "6379:6379"
           volumes:
                - redis-data:/data
-          command: [ "redis-server", "--requirepass", "yourStrongPassword", "--appendonly", "yes" ]
-          restart: unless-stopped
+          command: redis-server --appendonly yes
+          restart: always
 
 volumes:
      redis-data:
