--- a/src/main/resources/db/changelog/v-0.1.0/seed.changelog.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/seed.changelog.yaml
@@ -83,3 +83,8 @@ databaseChangeLog:
             relativeToChangelogFile: true
             tableName: social_organization
             quotchar: '"'
+        - loadData:
+            file: seeds/medicine.csv
+            relativeToChangelogFile: true
+            tableName: medicine
+            quotchar: '"'
