--- a/src/main/resources/db/changelog/v-0.1.0/table.changelog.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/table.changelog.yaml
@@ -56,3 +56,6 @@ databaseChangeLog:
   - include:
       file: tables/social_organization.yaml
       relativeToChangelogFile: true
+  - include:
+      file: tables/medicine.yaml
+      relativeToChangelogFile: true
