--- a/src/main/resources/db/changelog/v-0.1.0/tables/district.yaml
+++ b/src/main/resources/db/changelog/v-0.1.0/tables/district.yaml
@@ -48,3 +48,9 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: division
             validate: true
+        - createIndex:
+            tableName: district
+            indexName: idx_district_name
+            columns:
+              - column:
+                  name: name
